ENH: Added separate low/high threshold settings.  Added ITK logo in lower left of window.

--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,7 @@
 *.dsp           -crlf
 *.jpg           -crlf
 *.pdf           -crlf
+*.png           -crlf
 *.sh             crlf=input
 configure        crlf=input
 cvsrmvend        crlf=input
