ENH: BinaryMedianImageFilterTest added.

--- a/Testing/Code/BasicFilters/CMakeLists.txt
+++ b/Testing/Code/BasicFilters/CMakeLists.txt
@@ -33,6 +33,7 @@ ADD_TEST(itkAdaptImageFilterTest2 itkBasicFiltersTests itkAdaptImageFilterTest2)
 ADD_TEST(itkBasicArchitectureTest itkBasicFiltersTests itkBasicArchitectureTest)
 ADD_TEST(itkBinaryDilateImageFilterTest itkBasicFiltersTests itkBinaryDilateImageFilterTest)
 ADD_TEST(itkBinaryMagnitudeImageFilterTest itkBasicFiltersTests itkBinaryMagnitudeImageFilterTest)
+ADD_TEST(itkBinaryMedianImageFilterTest itkBasicFiltersTests itkBinaryMedianImageFilterTest)
 ADD_TEST(itkBinaryThresholdImageFilterTest itkBasicFiltersTests itkBinaryThresholdImageFilterTest)
 ADD_TEST(itkBloxBoundaryPointImageTest itkBasicFiltersTests itkBloxBoundaryPointImageTest)
 ADD_TEST(itkBloxCoreAtomTest itkBasicFiltersTests itkBloxCoreAtomTest)
@@ -135,6 +136,7 @@ itkAdaptImageFilterTest2
 itkBasicArchitectureTest 
 itkBinaryDilateImageFilterTest
 itkBinaryMagnitudeImageFilterTest
+itkBinaryMedianImageFilterTest
 itkBinaryThresholdImageFilterTest
 itkBloxBoundaryPointImageTest 
 itkBloxCoreAtomTest 
