--- a/Testing/Code/Common/CMakeLists.txt
+++ b/Testing/Code/Common/CMakeLists.txt
@@ -43,6 +43,7 @@ ADD_TEST(itkImageRegionExclusionIteratorWithIndexTest itkCommonTests itkImageReg
 ADD_TEST(itkImageSliceIteratorTest itkCommonTests itkImageSliceIteratorTest)
 ADD_TEST(itkIteratorTests itkCommonTests itkIteratorTests)
 ADD_TEST(itkLightObjectTest itkCommonTests itkLightObjectTest)
+ADD_TEST(itkLevelSetFunctionTest itkLevelSetFunctionTest)
 ADD_TEST(itkMatrixTest itkCommonTests itkMatrixTest)
 ADD_TEST(itkMapContainerTest itkCommonTests itkMapContainerTest)
 ADD_TEST(itkMemoryLeakTest itkCommonTests itkMemoryLeakTest)
@@ -107,6 +108,7 @@ itkImageRegionTest
 itkImageRegionExclusionIteratorWithIndexTest 
 itkImageSliceIteratorTest 
 itkIteratorTests 
+itkLevelSetFunctionTest
 itkLightObjectTest 
 itkMatrixTest 
 itkMapContainerTest 
