ENH: Implementation of body load is more generic now.

--- a/Code/Numerics/FEM/CMakeLists.txt
+++ b/Code/Numerics/FEM/CMakeLists.txt
@@ -113,6 +113,7 @@ SOURCE_FILES(FEM_SRCS
   itkFEMLoadLandmark.h
   itkFEMImageMetricLoad.h
 
+  itkFEMLoadImplementationGenericBodyLoad.h
   itkFEMLoadImplementationTest.h
   itkFEMImageMetricLoadImplementation.h
 
