ENH: two new classes BSplineKernelFunction and BSplineDerivativeKernelFunction useful for nonparameteric estimation and reconstruction.

--- a/Testing/Code/Common/CMakeLists.txt
+++ b/Testing/Code/Common/CMakeLists.txt
@@ -22,6 +22,7 @@ ADD_TEST(itkAzimuthElevationToCartesianTransformTest itkCommonTests itkAzimuthEl
 ADD_TEST(itkBinaryThresholdImageFunctionTest itkCommonTests itkBinaryThresholdImageFunctionTest)
 ADD_TEST(itkBoundingBoxTest itkCommonTests itkBoundingBoxTest)
 ADD_TEST(itkBSplineInterpolateImageFunctionTest itkCommonTests itkBSplineInterpolateImageFunctionTest)
+ADD_TEST(itkBSplineKernelFunctionTest itkCommonTests itkBSplineKernelFunctionTest)
 ADD_TEST(itkByteSwapTest itkCommonTests itkByteSwapTest)
 ADD_TEST(itkConstNeighborhoodIteratorTest itkCommonTests itkConstNeighborhoodIteratorTest)
 ADD_TEST(itkConstSmartNeighborhoodIteratorTest itkCommonTests itkConstSmartNeighborhoodIteratorTest)
@@ -88,7 +89,8 @@ itkAutoPointerTest
 itkAzimuthElevationToCartesianTransformTest 
 itkBinaryThresholdImageFunctionTest 
 itkBoundingBoxTest 
-itkBSplineInterpolateImageFunctionTest 
+itkBSplineInterpolateImageFunctionTest
+itkBSplineKernelFunctionTest
 itkByteSwapTest 
 itkConstNeighborhoodIteratorTest 
 itkConstRandomAccessNeighborhoodIteratorTest 
