ENH: new class representing a BSpline deformable transform.

--- a/Testing/Code/Common/CMakeLists.txt
+++ b/Testing/Code/Common/CMakeLists.txt
@@ -21,6 +21,7 @@ ADD_TEST(itkAutoPointerTest itkCommonTests itkAutoPointerTest)
 ADD_TEST(itkAzimuthElevationToCartesianTransformTest itkCommonTests itkAzimuthElevationToCartesianTransformTest)
 ADD_TEST(itkBinaryThresholdImageFunctionTest itkCommonTests itkBinaryThresholdImageFunctionTest)
 ADD_TEST(itkBoundingBoxTest itkCommonTests itkBoundingBoxTest)
+ADD_TEST(itkBSplineDeformableTransformTest itkCommonTests itkBSplineDeformableTransformTest)
 ADD_TEST(itkBSplineInterpolateImageFunctionTest itkCommonTests itkBSplineInterpolateImageFunctionTest)
 ADD_TEST(itkBSplineKernelFunctionTest itkCommonTests itkBSplineKernelFunctionTest)
 ADD_TEST(itkByteSwapTest itkCommonTests itkByteSwapTest)
@@ -88,7 +89,8 @@ itkArray2Test
 itkAutoPointerTest
 itkAzimuthElevationToCartesianTransformTest 
 itkBinaryThresholdImageFunctionTest 
-itkBoundingBoxTest 
+itkBoundingBoxTest
+itkBSplineDeformableTransformTest 
 itkBSplineInterpolateImageFunctionTest
 itkBSplineKernelFunctionTest
 itkByteSwapTest 
