ENH: new class which factors out the computation of the interpolations weights.

--- a/Testing/Code/Common/CMakeLists.txt
+++ b/Testing/Code/Common/CMakeLists.txt
@@ -23,6 +23,7 @@ ADD_TEST(itkBinaryThresholdImageFunctionTest itkCommonTests itkBinaryThresholdIm
 ADD_TEST(itkBoundingBoxTest itkCommonTests itkBoundingBoxTest)
 ADD_TEST(itkBSplineDeformableTransformTest itkCommonTests itkBSplineDeformableTransformTest)
 ADD_TEST(itkBSplineInterpolateImageFunctionTest itkCommonTests itkBSplineInterpolateImageFunctionTest)
+ADD_TEST(itkBSplineInterpolationWeightFunctionTest itkCommonTests itkBSplineInterpolationWeightFunctionTest)
 ADD_TEST(itkBSplineKernelFunctionTest itkCommonTests itkBSplineKernelFunctionTest)
 ADD_TEST(itkByteSwapTest itkCommonTests itkByteSwapTest)
 ADD_TEST(itkConstNeighborhoodIteratorTest itkCommonTests itkConstNeighborhoodIteratorTest)
@@ -92,6 +93,7 @@ itkBinaryThresholdImageFunctionTest
 itkBoundingBoxTest
 itkBSplineDeformableTransformTest 
 itkBSplineInterpolateImageFunctionTest
+itkBSplineInterpolationWeightFunctionTest
 itkBSplineKernelFunctionTest
 itkByteSwapTest 
 itkConstNeighborhoodIteratorTest 
