ENH: New BSpline resampling functionality.

--- a/Testing/Code/BasicFilters/CMakeLists.txt
+++ b/Testing/Code/BasicFilters/CMakeLists.txt
@@ -35,6 +35,7 @@ ADD_TEST(itkBinaryDilateImageFilterTest itkBasicFiltersTests itkBinaryDilateImag
 ADD_TEST(itkBinaryMagnitudeImageFilterTest itkBasicFiltersTests itkBinaryMagnitudeImageFilterTest)
 ADD_TEST(itkBinaryMedianImageFilterTest itkBasicFiltersTests itkBinaryMedianImageFilterTest)
 ADD_TEST(itkBinaryThresholdImageFilterTest itkBasicFiltersTests itkBinaryThresholdImageFilterTest)
+ADD_TEST(itkBSplineResampleImageFilterTest itkBasicFiltersTests itkBSplineResampleImageFilterTest)
 ADD_TEST(itkBloxBoundaryPointImageTest itkBasicFiltersTests itkBloxBoundaryPointImageTest)
 ADD_TEST(itkBloxCoreAtomTest itkBasicFiltersTests itkBloxCoreAtomTest)
 ADD_TEST(itkChangeInformationImageFilterTest itkBasicFiltersTests itkChangeInformationImageFilterTest)
@@ -138,6 +139,7 @@ itkBinaryDilateImageFilterTest
 itkBinaryMagnitudeImageFilterTest
 itkBinaryMedianImageFilterTest
 itkBinaryThresholdImageFilterTest
+itkBSplineResampleImageFilterTest
 itkBloxBoundaryPointImageTest 
 itkBloxCoreAtomTest 
 itkConfidenceConnectedImageFilterTest 
