--- a/Testing/Code/BasicFilters/CMakeLists.txt
+++ b/Testing/Code/BasicFilters/CMakeLists.txt
@@ -119,7 +119,7 @@ ADD_TEST(itkSobelEdgeDetectionImageFilterTest itkBasicFiltersTests itkSobelEdgeD
 ADD_TEST(itkZeroCrossingBasedEdgeDetectionImageFilterTest itkBasicFiltersTests itkZeroCrossingBasedEdgeDetectionImageFilterTest)
 ADD_TEST(itkCannyEdgeDetectionImageFilterTest itkBasicFiltersTests itkCannyEdgeDetectionImageFilterTest)
 ADD_TEST(itkHardConnectedComponentImageFilterTest itkBasicFiltersTests itkHardConnectedComponentImageFilterTest)
-
+ADD_TEST(itkBloxBoundaryPointImageToBloxBoundaryProfileImageFilterTest itkBasicFiltersTests itkBloxBoundaryPointImageToBloxBoundaryProfileImageFilterTest)
 
 SOURCE_FILES(BasicFilters_SRCS
 itkChangeInformationImageFilterTest 
@@ -217,6 +217,7 @@ itkDerivativeImageFilterTest
 itkDiscreteGaussianImageFilterTest
 itkWarpImageFilterTest
 itkHardConnectedComponentImageFilterTest
+itkBloxBoundaryPointImageToBloxBoundaryProfileImageFilterTest
 )
 
 
