--- a/Code/Common/CMakeLists.txt
+++ b/Code/Common/CMakeLists.txt
@@ -39,12 +39,9 @@ itkVector
 itkXMLFileOutputWindow
 )
 
-LINK_LIBRARIES (
-VXLNumerics
-)
-
 IF (WIN32)
   SOURCE_FILES(ITKCommon_SRCS itkWin32OutputWindow)
 ENDIF (WIN32)
 
 ADD_LIBRARY(ITKCommon ITKCommon_SRCS)
+TARGET_LINK_LIBRARIES (ITKCommon VXLNumerics)
