ERR: need .cxx on ADD_EXECUTABLE.

--- a/Testing/Code/Numerics/CMakeLists.txt
+++ b/Testing/Code/Numerics/CMakeLists.txt
@@ -41,7 +41,7 @@ itkRegularStepGradientDescentOptimizerTest
 itkVersorTransformOptimizerTest
 )
 
-ADD_EXECUTABLE(itkNumericsHeaderTest itkNumericsHeaderTest)
+ADD_EXECUTABLE(itkNumericsHeaderTest itkNumericsHeaderTest.cxx)
 ADD_EXECUTABLE(itkNumericsTests itkNumericsTests.cxx Numerics_SRCS)
 
 
