ERR: missing librarires for Unix. (commit by lorensen).

--- a/Utilities/MetaIO/CMakeLists.txt
+++ b/Utilities/MetaIO/CMakeLists.txt
@@ -38,3 +38,14 @@ IF (BUILD_TESTING)
   )
 ENDIF (BUILD_TESTING)
 
+IF(UNIX)
+  IF (NOT ITK_USE_SYSTEM_STDLIB)
+  LINK_LIBRARIES (
+  -lCio
+  )
+  ENDIF(NOT ITK_USE_SYSTEM_STDLIB)
+  LINK_LIBRARIES (
+  -lm
+  )
+ENDIF(UNIX)
+
