--- a/Code/IO/CMakeLists.txt
+++ b/Code/IO/CMakeLists.txt
@@ -1,5 +1,6 @@
 INCLUDE_DIRECTORIES(${ITK_SOURCE_DIR}/Utilities/zlib)
 INCLUDE_DIRECTORIES(${ITK_SOURCE_DIR}/Utilities/png)
+INCLUDE_DIRECTORIES(${ITK_SOURCE_DIR}/Utilities/MetaIO)
 
 SOURCE_FILES(ITKIO_SRCS
 itkWriter
@@ -28,9 +29,10 @@ ENDIF(WIN32)
 
 # Add ITKIO library
 ADD_LIBRARY(ITKIO ITKIO_SRCS)
-TARGET_LINK_LIBRARIES(ITKIO ITKCommon itkpng itkzlib)
+TARGET_LINK_LIBRARIES(ITKIO ITKCommon itkpng itkzlib MetaIO)
 
 LINK_DIRECTORIES(${ITK_BINARY_DIR}/Utilities/png)
 LINK_DIRECTORIES(${ITK_BINARY_DIR}/Utilities/zlib)
+LINK_DIRECTORIES(${ITK_BINARY_DIR}/Utilities/MetaIO)
 LINK_DIRECTORIES(${ITK_BINARY_DIR}/Code/IO)
 
