ENH: Uses new MetaIO

--- a/Testing/Code/IO/CMakeLists.txt
+++ b/Testing/Code/IO/CMakeLists.txt
@@ -2,11 +2,13 @@ INCLUDE_DIRECTORIES(${ITK_SOURCE_DIR}/Code/BasicFilters)
 INCLUDE_DIRECTORIES(${ITK_SOURCE_DIR}/Code/IO)
 INCLUDE_DIRECTORIES(${ITK_SOURCE_DIR}/Utilities/zlib)
 INCLUDE_DIRECTORIES(${ITK_SOURCE_DIR}/Utilities/png)
+INCLUDE_DIRECTORIES(${ITK_SOURCE_DIR}/Utilities/MetaIO)
 
-LINK_LIBRARIES(ITKIO ITKCommon itkpng itkzlib)
+LINK_LIBRARIES(ITKIO ITKCommon itkpng itkzlib MetaIO)
 
 LINK_DIRECTORIES(${ITK_BINARY_DIR}/Utilities/png)
 LINK_DIRECTORIES(${ITK_BINARY_DIR}/Utilities/zlib)
+LINK_DIRECTORIES(${ITK_BINARY_DIR}/Utilities/MetaIO)
 LINK_DIRECTORIES(${ITK_BINARY_DIR}/Code/IO)
 
 ADD_EXECUTABLE(itkIOHeaderTest itkIOHeaderTest.cxx)
