BUG: Fixed bug in byte ordering and fixed memory initialization

--- a/Utilities/MetaIO/CMakeLists.txt
+++ b/Utilities/MetaIO/CMakeLists.txt
@@ -32,11 +32,11 @@ LINK_LIBRARIES (
   MetaIO
 )
 
-IF (BUILD_TESTING)
-  SUBDIRS(
-   tests
-  )
-ENDIF (BUILD_TESTING)
+#IF (BUILD_TESTING)
+#SUBDIRS(
+#tests
+#)
+#ENDIF (BUILD_TESTING)
 
 IF(UNIX)
   IF (NOT ITK_USE_SYSTEM_STDLIB)
